minor css correction to remove horizontal scroll

--- a/static/board.css
+++ b/static/board.css
@@ -24,8 +24,6 @@ header {
     color: white;
     font-weight: bold;
     border-bottom: 0.2em solid #cb4b16;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
     margin-bottom: 0.25em;
     display: flex;
     flex-direction: row;
@@ -33,6 +31,7 @@ header {
 }
 
 span.title_section {
+    margin-left: 0.75em;
     margin-right: 0.5em;
 }
 
@@ -41,7 +40,7 @@ span.search_tag_list {
 }
 
 form#search_box {
-    margin-right: 1em;
+    margin-right: 0.75em;
     font-weight: normal;
 }
 
